Add experimental belittler Add massive food vat Remove possible NRE in Hediff_CapMods_DisableCapModsForRRHediffsOptionally Remove unused file

--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -73,6 +73,7 @@
     <Compile Include="FeedingTube\Building_AutoFeeder.cs" />
     <Compile Include="FeedingTube\Building_FoodFaucet.cs" />
     <Compile Include="FeedingTube\Building_FoodProcessor.cs" />
+    <Compile Include="FeedingTube\Building_FoodVatMassive.cs" />
     <Compile Include="FeedingTube\Building_FoodVatLarge.cs" />
     <Compile Include="FeedingTube\Building_FoodVatSmall.cs" />
     <Compile Include="FeedingTube\Comps\FoodNetStorage_CompProperties.cs" />
