--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -102,6 +102,8 @@
     <Compile Include="FeedingTube\SectionLayer_ThingsFoodGrid.cs" />
     <Compile Include="FeedingTube\UI\Alert_FoodProcessorNeedsDispenser.cs" />
     <Compile Include="FeedingTube\Utilities\FeedingTubeUtility.cs" />
+    <Compile Include="RimRoundCore\AI\StatPart_CookSpeed.cs" />
+    <Compile Include="RimRoundCore\AI\StatPart_EatingSpeed.cs" />
     <Compile Include="RimRoundCore\AI\StatPart_SkinYieldBodyFat.cs" />
     <Compile Include="RimRoundCore\AI\GameCondition_PsychicHungerIncrease.cs" />
     <Compile Include="RimRoundCore\AI\PrisonerStuff\InteractionWorker_ReduceReluctance.cs" />
