--- a/Source/TestingRange/TestingRange.csproj
+++ b/Source/TestingRange/TestingRange.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Configurations>Debug;Release;1_3;1_4</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
