--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -120,6 +120,8 @@
     <Compile Include="FeedingTube\SectionLayer_ThingsFoodGrid.cs" />
     <Compile Include="FeedingTube\UI\Alert_FoodProcessorNeedsDispenser.cs" />
     <Compile Include="FeedingTube\Utilities\FeedingTubeUtility.cs" />
+    <Compile Include="RimRound\AI\JobDriver_PlayWithBlob.cs" />
+    <Compile Include="RimRound\AI\JoyGiver_PlayWithBlob.cs" />
     <Compile Include="RimRound\AI\StatPart_ArmorRating_Blunt.cs" />
     <Compile Include="RimRound\AI\StatPart_ArmorRating_Sharp.cs" />
     <Compile Include="RimRound\AI\StatPart_ComfyTemperatureMin.cs" />
@@ -168,6 +170,7 @@
     <Compile Include="RimRound\Patch\RimWorldPatches\JobDriver-PlantWork_MakeNewToils_AddExtraPlantYields.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\DietAIPatches\Need-Food_FoodFallPerTickAssumingCategory_ReduceForHeavyPawnsAndAdjustForPerks.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\PawnCapacitiesHandler_CapableOf_MakeMovementCapableOfSettingsDependent.cs" />
+    <Compile Include="RimRound\UI\Gizmos\MakeRecreationSpotGizmo.cs" />
     <Compile Include="RimRound\Utilities\CaravanPatchUtility.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Caravan\CaravanMaker_MakeCaravan_ChangeDietMode.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Caravan\Caravan_RemoveAllPawns_ChangeDietMode.cs" />
