--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -120,6 +120,7 @@
     <Compile Include="FeedingTube\SectionLayer_ThingsFoodGrid.cs" />
     <Compile Include="FeedingTube\UI\Alert_FoodProcessorNeedsDispenser.cs" />
     <Compile Include="FeedingTube\Utilities\FeedingTubeUtility.cs" />
+    <Compile Include="Patch\RimWorldPatches\HamronyPatchAttribute.cs" />
     <Compile Include="RimRound\AI\JobDriver_PlayWithBlob.cs" />
     <Compile Include="RimRound\AI\JoyGiver_PlayWithBlob.cs" />
     <Compile Include="RimRound\AI\StatPart_ArmorRating_Blunt.cs" />
@@ -171,6 +172,7 @@
     <Compile Include="RimRound\Patch\RimWorldPatches\JobDriver-PlantWork_MakeNewToils_AddExtraPlantYields.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\DietAIPatches\Need-Food_FoodFallPerTickAssumingCategory_ReduceForHeavyPawnsAndAdjustForPerks.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\PawnCapacitiesHandler_CapableOf_MakeMovementCapableOfSettingsDependent.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\RootPlay_Update_AddCountdownTick.cs" />
     <Compile Include="RimRound\UI\Gizmos\MakeGeneratorGizmo.cs" />
     <Compile Include="RimRound\UI\Gizmos\MakeRecreationSpotGizmo.cs" />
     <Compile Include="RimRound\Utilities\CaravanPatchUtility.cs" />
