Implement 'Crop Notch' Implement 'There's the Beef!'

--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -125,8 +125,10 @@
     <Compile Include="RimRound\AI\JoyGiver_PlayWithBlob.cs" />
     <Compile Include="RimRound\AI\StatPart_ArmorRating_Blunt.cs" />
     <Compile Include="RimRound\AI\StatPart_ArmorRating_Sharp.cs" />
+    <Compile Include="RimRound\AI\StatPart_ButcheryFleshEfficiency.cs" />
     <Compile Include="RimRound\AI\StatPart_ComfyTemperatureMin.cs" />
     <Compile Include="RimRound\AI\StatPart_CookSpeed.cs" />
+    <Compile Include="RimRound\AI\StatPart_HarvestYield.cs" />
     <Compile Include="RimRound\AI\StatPart_IncomingDamageFactor.cs" />
     <Compile Include="RimRound\AI\StatPart_InjuryHealingFactor.cs" />
     <Compile Include="RimRound\AI\StatPart_PawnBeauty.cs" />
