--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -88,6 +88,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FeedingTube\Building_AdvancedAutoFeeder.cs" />
     <Compile Include="FeedingTube\Building_AutoFeeder.cs" />
     <Compile Include="FeedingTube\Building_FoodFaucet.cs" />
     <Compile Include="FeedingTube\Building_FoodProcessor.cs" />
@@ -120,36 +121,38 @@
     <Compile Include="FeedingTube\SectionLayer_ThingsFoodGrid.cs" />
     <Compile Include="FeedingTube\UI\Alert_FoodProcessorNeedsDispenser.cs" />
     <Compile Include="FeedingTube\Utilities\FeedingTubeUtility.cs" />
-    <Compile Include="RimRound\AI\JobDriver_PlayWithBlob.cs" />
-    <Compile Include="RimRound\AI\JoyGiver_PlayWithBlob.cs" />
-    <Compile Include="RimRound\AI\StatPart_ArmorRating_Blunt.cs" />
-    <Compile Include="RimRound\AI\StatPart_ArmorRating_Sharp.cs" />
-    <Compile Include="RimRound\AI\StatPart_ButcheryFleshEfficiency.cs" />
-    <Compile Include="RimRound\AI\StatPart_ComfyTemperatureMin.cs" />
-    <Compile Include="RimRound\AI\StatPart_CookSpeed.cs" />
-    <Compile Include="RimRound\AI\StatPart_Flammability.cs" />
-    <Compile Include="RimRound\AI\StatPart_HarvestYield.cs" />
-    <Compile Include="RimRound\AI\StatPart_IncomingDamageFactor.cs" />
-    <Compile Include="RimRound\AI\StatPart_InjuryHealingFactor.cs" />
-    <Compile Include="RimRound\AI\StatPart_PawnBeauty.cs" />
-    <Compile Include="RimRound\AI\StatPart_SkinYieldBodyFat.cs" />
+    <Compile Include="FeedingTube\AI\AdvancedAutoFeeder\JobDriver_ListenToRadio.cs" />
+    <Compile Include="FeedingTube\AI\AdvancedAutoFeeder\JoyGiver_ListenToRadio.cs" />
+    <Compile Include="RimRound\AI\PlayWithBlob\JobDriver_PlayWithBlob.cs" />
+    <Compile Include="RimRound\AI\PlayWithBlob\JoyGiver_PlayWithBlob.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_ArmorRating_Blunt.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_ArmorRating_Sharp.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_ButcheryFleshEfficiency.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_ComfyTemperatureMin.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_CookSpeed.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_Flammability.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_HarvestYield.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_IncomingDamageFactor.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_InjuryHealingFactor.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_PawnBeauty.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_SkinYieldBodyFat.cs" />
     <Compile Include="RimRound\AI\GameCondition_PsychicHungerIncrease.cs" />
     <Compile Include="RimRound\AI\PrisonerStuff\InteractionWorker_ReduceReluctance.cs" />
     <Compile Include="RimRound\AI\PrisonerStuff\JobDrivers\JobDriver_ChatToReduceReluctance.cs" />
     <Compile Include="RimRound\AI\PrisonerStuff\WorkGivers\WorkGiver_Warden_ReduceReluctanceChat.cs" />
     <Compile Include="RimRound\AI\Recipe_RemoveFatLight.cs" />
     <Compile Include="RimRound\AI\Recipe_RemoveFatHeavy.cs" />
-    <Compile Include="RimRound\AI\StatPart_MassAdjustedByWeight.cs" />
-    <Compile Include="RimRound\AI\StatPart_MeatYieldBodyFat.cs" />
-    <Compile Include="RimRound\AI\StatPart_ToxicResistance.cs" />
-    <Compile Include="RimRound\AI\ThoughtWorker_WeightOpinion_Dislike.cs" />
-    <Compile Include="RimRound\AI\ThoughtWorker_WeightOpinion_Fanatical.cs" />
-    <Compile Include="RimRound\AI\ThoughtWorker_WeightOpinion_Love.cs" />
-    <Compile Include="RimRound\AI\ThoughtWorker_WeightOpinion_Hate.cs" />
-    <Compile Include="RimRound\AI\ThoughtWorker_WeightOpinion_Like.cs" />
-    <Compile Include="RimRound\AI\ThoughtWorker_WeightOpinion_Neutral.cs" />
-    <Compile Include="RimRound\AI\ThoughtWorker_WeightOpinion_NeutralMinus.cs" />
-    <Compile Include="RimRound\AI\ThoughtWorker_WeightOpinion_NeutralPlus.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_MassAdjustedByWeight.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_MeatYieldBodyFat.cs" />
+    <Compile Include="RimRound\AI\StatParts\StatPart_ToxicResistance.cs" />
+    <Compile Include="RimRound\AI\WeightOpinions\ThoughtWorker_WeightOpinion_Dislike.cs" />
+    <Compile Include="RimRound\AI\WeightOpinions\ThoughtWorker_WeightOpinion_Fanatical.cs" />
+    <Compile Include="RimRound\AI\WeightOpinions\ThoughtWorker_WeightOpinion_Love.cs" />
+    <Compile Include="RimRound\AI\WeightOpinions\ThoughtWorker_WeightOpinion_Hate.cs" />
+    <Compile Include="RimRound\AI\WeightOpinions\ThoughtWorker_WeightOpinion_Like.cs" />
+    <Compile Include="RimRound\AI\WeightOpinions\ThoughtWorker_WeightOpinion_Neutral.cs" />
+    <Compile Include="RimRound\AI\WeightOpinions\ThoughtWorker_WeightOpinion_NeutralMinus.cs" />
+    <Compile Include="RimRound\AI\WeightOpinions\ThoughtWorker_WeightOpinion_NeutralPlus.cs" />
     <Compile Include="RimRound\Comps\Map\MapComp_RRGasGrid.cs" />
     <Compile Include="RimRound\Comps\PsychicShips\CompCauseGameCondition_HungerDrone.cs" />
     <Compile Include="RimRound\Comps\PsychicShips\CompIncreaseHunger.cs" />
@@ -313,8 +316,6 @@
   <ItemGroup>
     <Content Include="Notes.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="FeedingTube\AI\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
