Add mod extension for UltraTech textiles Make new clothing items' effects as specified in the mod extension work Move patches to folders

--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -158,6 +158,7 @@
     <Compile Include="RimRound\Comps\PsychicShips\CompIncreaseHunger.cs" />
     <Compile Include="RimRound\Comps\PsychicShips\CompProperties_CausesGameCondition_HungerDrone.cs" />
     <Compile Include="RimRound\Comps\PsychicShips\CompProperties_IncreaseHunger.cs" />
+    <Compile Include="RimRound\Defs\ClothingModExtension.cs" />
     <Compile Include="RimRound\Defs\InteractionDefOf.cs" />
     <Compile Include="RimRound\Defs\ME_ExtraProductPlantYield.cs" />
     <Compile Include="RimRound\Hediffs\Hediff_AIEncouragementChip.cs" />
@@ -171,18 +172,22 @@
     <Compile Include="RimRound\Patch\HumanoidAlienRacesPatches\HarmonyPatches_GenerateBodyTypePostfix_ChangeRandomBodyAssignmentForNullBackstoriesToThin.cs" />
     <Compile Include="RimRound\Patch\PawnRenderer_RenderAsPack_DontRenderAsPackForCustomBodies.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\BodyPartDef_GetMaxHealth_AdjustMaxHPByWeight.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\Clothing\PawnCapacityWorker-Eating_CalculateCapacityLevel_AlterForClothingBonuses.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\Clothing\PawnCapacityWorker-Manipulation_CalculateCapacityLevel_AlterForClothingBonuses.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\Clothing\PawnCapacityWorker-Movement_CalculateCapacityLevel_AlterForClothingBonuses.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\GasPatches\Building-Vent_TickRare_DiffuseRRGasses.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\GasPatches\GasUtility_PawnGasEffectsTick_AddSupportForGas.cs" />
-    <Compile Include="RimRound\Patch\RimWorldPatches\GenTemperature_PushHeat_AdjustForPerks.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\Perks\GenTemperature_PushHeat_AdjustForPerks.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\GraphicalPatches\PawnGraphicSet_ResolveApparelGraphics_DontIncludeHoverChairIfLayingDown.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\HediffSet_GetHungerRateFactor_AlterAccordingToSettings.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\HediffSet_GetRestFallFactor_AlterAccordingToSettings.cs" />
-    <Compile Include="RimRound\Patch\RimWorldPatches\Hediff_CapMods_DisableCapModsForRRHediffsOptionally.cs" />
-    <Compile Include="RimRound\Patch\RimWorldPatches\MassUtility_Capacity_AlterForPerks.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\Perks\Hediff_CapMods_DisableCapModsForRRHediffsOptionally.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\Perks\MassUtility_Capacity_AlterForPerks.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\MenuPatches\HealthCardUtility_DrawHediffRow_AddProgressBarToNextWeightStage.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\MenuPatches\ITab-Pawn-Visitor_FillTab_AddLabelsForGainingReluctance.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\JobDriver-PlantWork_MakeNewToils_AddExtraPlantYields.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\DietAIPatches\Need-Food_FoodFallPerTickAssumingCategory_ReduceForHeavyPawnsAndAdjustForPerks.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\Pawn-ApparelTracker_Notify-ApparelChanged_AddSupportForRRClothing.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\PawnCapacitiesHandler_CapableOf_MakeMovementCapableOfSettingsDependent.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\RootPlay_Update_AddCountdownTick.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\GasPatches\SectionLayer-Gas_ColorAt_AddRRGasSupport.cs" />
@@ -200,7 +205,7 @@
     <Compile Include="RimRound\Patch\RimWorldPatches\DietAIPatches\Need-Food_MalnutritionSeverityPerInterval_AdjustByPawnWeight.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\GraphicalPatches\Page-ConfigureStartingPawns_DoWindowContents_UpdateSprite.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Pawn-HealthTracker_MakeDowned_DropHoverChair.cs" />
-    <Compile Include="RimRound\Patch\RimWorldPatches\PawnCapacityUtility_CalculateCapacityLevel_AlterForPerksAndSooter.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\Perks\PawnCapacityUtility_CalculateCapacityLevel_AlterForPerksAndSooter.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\PawnGenerator\PawnGenerator_GenerateInitialHediffs_AddWeightHediffAndSetBodyType.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\PawnGenerator\PawnGenerator_GenerateBodyType_SetDefaultBodyType.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\PawnGenerator\PawnGenerator_GenerateTraits_AddWeightOpinions.cs" />
