--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -180,6 +180,7 @@
     <Compile Include="RimRound\Patch\RimWorldPatches\Clothing\PawnCapacityWorker-Eating_CalculateCapacityLevel_AlterForClothingBonuses.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Clothing\PawnCapacityWorker-Manipulation_CalculateCapacityLevel_AlterForClothingBonuses.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Clothing\PawnCapacityWorker-Movement_CalculateCapacityLevel_AlterForClothingBonuses.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\FoodUtility_AddFoodPoisoningHediff_DontIfHavePerk.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\GasPatches\Building-Vent_TickRare_DiffuseRRGasses.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\GasPatches\GasUtility_AddGas_AddSuuportForRRGas.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\GasPatches\GasUtility_PawnGasEffectsTick_AddSupportForGas.cs" />
