--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -57,6 +57,7 @@
     </Reference>
     <Reference Include="AlienRace">
       <HintPath>..\..\..\..\DevDependencies\839005762_humanoid_alien_races\1.4\Assemblies\AlienRace.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
@@ -183,7 +184,7 @@
     <Compile Include="RimRound\Patch\RimWorldPatches\FoodUtility_AddFoodPoisoningHediff_DontIfHavePerk.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\GasPatches\Building-Vent_TickRare_DiffuseRRGasses.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\GasPatches\GasUtility_AddGas_AddSuuportForRRGas.cs" />
-    <Compile Include="RimRound\Patch\RimWorldPatches\GasPatches\GasUtility_PawnGasEffectsTick_AddSupportForGas.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\GasPatches\Pawn_Tick_AddSupportForGas.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Pawn-ApparelTracker_Notify-ApparelRemoved_AddSupportForRRClothing.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Pawn-ApparelTracker_Notify-ApparelAdded_AddSupportForRRClothing.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Perks\GenTemperature_PushHeat_AdjustForPerks.cs" />
