--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -177,7 +177,8 @@
     <Compile Include="RimRound\Patch\HumanoidAlienRacesPatches\BackstoryDef_ResolveReferences_ChangeRandomBodyAssignmentForNullBackstoriesToThin.cs" />
     <Compile Include="RimRound\Patch\HumanoidAlienRacesPatches\HarmonyPatches_BaseHeadOffsetAtHelper_AddExtraBodySpecificHeadOffset.cs" />
     <Compile Include="RimRound\Patch\HumanoidAlienRacesPatches\HarmonyPatches_GenerateBodyTypePostfix_ChangeRandomBodyAssignmentForNullBackstoriesToThin.cs" />
-    <Compile Include="RimRound\Patch\PawnRenderer_RenderAsPack_DontRenderAsPackForCustomBodies.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\PawnRenderer\PawnRenderer_DrawBodyApparel_AlterShellClothingIfNoRRSprite.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\PawnRenderer\PawnRenderer_RenderAsPack_DontRenderAsPackForCustomBodies.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\BodyPartDef_GetMaxHealth_AdjustMaxHPByWeight.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Clothing\PawnCapacityWorker-Eating_CalculateCapacityLevel_AlterForClothingBonuses.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Clothing\PawnCapacityWorker-Manipulation_CalculateCapacityLevel_AlterForClothingBonuses.cs" />
@@ -188,6 +189,7 @@
     <Compile Include="RimRound\Patch\RimWorldPatches\GasPatches\Pawn_Tick_AddSupportForGas.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Pawn-ApparelTracker_Notify-ApparelRemoved_AddSupportForRRClothing.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Pawn-ApparelTracker_Notify-ApparelAdded_AddSupportForRRClothing.cs" />
+    <Compile Include="RimRound\Patch\RimWorldPatches\PawnRenderer\PawnRenderer_ShellFullyCoversHead_AlterShellClothingForRRBodies.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Perks\GenTemperature_PushHeat_AdjustForPerks.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\GraphicalPatches\PawnGraphicSet_ResolveApparelGraphics_DontIncludeHoverChairIfLayingDown.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\HediffSet_GetHungerRateFactor_AlterAccordingToSettings.cs" />
