--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -176,6 +176,7 @@
     <Compile Include="RimRound\Patch\CameraPlusPatches\CameraPlus_Tools_ShouldShowDot_DontShowDotForGelatinous.cs" />
     <Compile Include="RimRound\Patch\HumanoidAlienRacesPatches\BackstoryDef_ResolveReferences_ChangeRandomBodyAssignmentForNullBackstoriesToThin.cs" />
     <Compile Include="RimRound\Patch\HumanoidAlienRacesPatches\HarmonyPatches_BaseHeadOffsetAtHelper_AddExtraBodySpecificHeadOffset.cs" />
+    <Compile Include="RimRound\Patch\HumanoidAlienRacesPatches\HarmonyPatches_CheckBodyType_ChangeRRToThin.cs" />
     <Compile Include="RimRound\Patch\HumanoidAlienRacesPatches\HarmonyPatches_GenerateBodyTypePostfix_ChangeRandomBodyAssignmentForNullBackstoriesToThin.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Corpse_CurRotDrawMode-Get_ChangeDessicatedCorpseBodyTypeToNonRR.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Corpse_SpawnSetup_UpdateBodyType.cs" />
