--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+RESULT_HASH.txt
+
 # Mono auto generated files
 mono_crash.*
 Source/TestingRange/bin
