--- a/Source/RimRound/RimRound.csproj
+++ b/Source/RimRound/RimRound.csproj
@@ -230,6 +230,7 @@
     <Compile Include="RimRound\Patch\RimWorldPatches\StatWorker_FinalizeValue_AlterMaxValueForPerks.cs" />
     <Compile Include="RimRound\Patch\RimWorldPatches\Toils-LayDown_ApplyBedThoughts_AlterThoughtsForBlobBeds.cs" />
     <Compile Include="RimRound\Patch\StatueOfColonist\StatueOfColonist_StatueOfColonistGraphicSet_TryGetGraphicApparel_FixForRRBodies.cs" />
+    <Compile Include="RimRound\Things\Building_ZenithOrb.cs" />
     <Compile Include="RimRound\UI\CustomBodySelectDropdown.cs" />
     <Compile Include="RimRound\UI\Gizmos\CustomBodyTypeGizmo.cs" />
     <Compile Include="RimRound\UI\Gizmos\MakeGeneratorGizmo.cs" />
